--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "url": "https://github.com/paydunyadev/paydunya-node-master/issues"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "bluebird": "^2.1.3",
-    "superagent": "^0.18.1"
+    "superagent": "^0.18.1",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
     "browserify": "^10.2.4",
