--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "paydunya",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "PAYDUNYA Node.JS Library",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "mocha test",
     "build-debug": "browserify lib/index.js -o dist/paydunya-node.debug.js",
-    "build": "browserify -g uglifyify lib/index.js -o dist/paydunya-node.min.js"
+    "build": "rimraf dist && tsc"
   },
   "repository": {
     "type": "git",
@@ -29,7 +29,9 @@
     "typescript": "^5.9.3"
   },
   "devDependencies": {
+    "@types/node": "^24.7.0",
     "browserify": "^10.2.4",
+    "rimraf": "^6.0.1",
     "uglifyify": "^3.0.1"
   }
 }
