--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "jest test",
-    "build-debug": "browserify lib/index.js -o dist/paydunya-node.debug.js",
+    "build-debug": "browserify dist/index.js -o dist/paydunya-node.debug.js",
     "build": "rimraf dist && tsc"
   },
   "repository": {
@@ -15,7 +15,11 @@
   "keywords": [
     "paydunya",
     "mobile",
-    "payment"
+    "payment",
+    "sdk",
+    "nodejs",
+    "library",
+    "api"
   ],
   "author": "PAYDUNYA",
   "license": "MIT",
@@ -36,7 +40,9 @@
     "jest": "^30.2.0",
     "rimraf": "^6.0.1",
     "ts-jest": "^29.4.5",
-    "uglifyify": "^3.0.1"
+    "uglifyify": "^3.0.1",
+    "webpack": "^5.102.1",
+    "webpack-cli": "^6.0.1"
   },
   "files": [
     "dist/**/*"
