--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.13",
   "description": "PAYDUNYA Node.JS Library",
   "main": "dist/index.js",
+  "types": "dists/index.d.ts",
   "scripts": {
     "test": "jest test",
-    "build-debug": "browserify dist/index.js -o dist/paydunya-node.debug.js",
-    "build": "rimraf dist && tsc"
+    "webpack": "webpack --config webpack.config.js",
+    "build": "rimraf dist && tsc && npm run webpack",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -27,24 +29,25 @@
     "url": "https://github.com/paydunyadev/paydunya-node-master/issues"
   },
   "dependencies": {
-    "axios": "^1.12.2",
-    "bluebird": "^2.1.3",
-    "superagent": "^0.18.1",
-    "typescript": "^5.9.3"
+    "axios": "^1.12.2"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "@types/node": "^24.7.0",
-    "browserify": "^10.2.4",
     "dotenv": "^17.2.3",
     "jest": "^30.2.0",
     "rimraf": "^6.0.1",
     "ts-jest": "^29.4.5",
-    "uglifyify": "^3.0.1",
+    "ts-loader": "^9.5.4",
+    "typescript": "^5.9.3",
     "webpack": "^5.102.1",
     "webpack-cli": "^6.0.1"
   },
+  "exports": {
+    ".": "./dist/index.js"
+  },
   "files": [
-    "dist/**/*"
+    "dist/*.d.ts",
+    "dist"
   ]
 }
